--- a/hydredu/Bio/GeneticModification/index.html
+++ b/hydredu/Bio/GeneticModification/index.html
@@ -4,6 +4,28 @@
       hydredu - Genetic modification
     </title>
   </head>
+  <style>
+    body {
+      background-color: #222222;
+      color: #eeeeee;
+    }
+    /* unvisited link */
+    a:link {
+        color: #cccc00;
+    }
+    /* visited link */
+    a:visited {
+        color: #999900;
+    }
+    /* mouse over link */
+    a:hover {
+        color: #0000dd;
+    }
+    /* selected link */
+    a:active {
+        color: #006400;
+    }
+  </style>
   <body>
     <center>
       <h2>
