--- a/hydredu/Bio/GeneticModification/index.html
+++ b/hydredu/Bio/GeneticModification/index.html
@@ -35,38 +35,39 @@
 		.active {
 		    	background-color: #4CAF50;
 		}
-		.sub {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 50;
-			width: 100%;
-		}
-		.subsub {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 100;
-			width: 100%;
-		}
 	</style>
   <body>
-    <center>
-      <h2>
-        Some people agree with genetic engineering and cloning, however some don't.<p>
-        Are you for or against?
-      </h2>
-      <br>
-      In 1996, Dolly the sheep was the fruitage of an experiment, but what was<p>
-      that experiment? Dolly was clone. She was a clone of another sheep who<p>
-      'kindly donated' their DNA in the form of a nucleus, the scientists then<p>
-      inserted the nucleus into the egg of another sheep, 
+	<ul>
+		<li>
+			<a class="active" href="https://hydronesiumscratch.github.io/index.html">
+				Home
+			</a>
+		</li>
+  		<li>
+			<a href="https://hydronesiumscratch.github.io/hydredu/">
+				hydreducation
+			</a>
+		</li>
+  		<li>
+			<a href="https://hydronesiumscratch.github.io/Game/">
+				JavaScript game
+			</a>
+		</li>
+		<li>
+			<a href="https://hydronesiumscratch.github.io/contributors/">
+				Contributors
+				</a>
+		</li>
+	</ul>
+	<center>
+		<h2>
+			Some people agree with genetic engineering and cloning, however some don't.<p>
+			Are you for or against?
+		</h2>
+		<br>
+		In 1996, Dolly the sheep was the fruitage of an experiment, but what was that experiment?<p>
+		Dolly was clone. She was a clone of another sheep who 'kindly donated' their DNA in the form of a nucleus,<p>
+		the scientists then inserted the nucleus into the egg of another sheep, 
     </center>
   </body>
 </html>
