--- a/hydredu/Bio/GeneticModification/index.html
+++ b/hydredu/Bio/GeneticModification/index.html
@@ -39,7 +39,7 @@
   <body>
 	<ul>
 		<li>
-			<a class="active" href="https://hydronesiumscratch.github.io/index.html">
+			<a href="https://hydronesiumscratch.github.io/index.html">
 				Home
 			</a>
 		</li>
@@ -49,7 +49,7 @@
 			</a>
 		</li>
   		<li>
-			<a href="https://hydronesiumscratch.github.io/hydredu/">
+			<a class="active" href="https://hydronesiumscratch.github.io/hydredu/">
 				hydreducation
 			</a>
 		</li>
