--- a/hydredu/Bio/index.html
+++ b/hydredu/Bio/index.html
@@ -75,7 +75,7 @@
 			</li>
   			<li>
 				<a href="https://hydronesiumscratch.github.io/Game/">
-					JavaScript game
+					Flappy square
 				</a>
 			</li>
 		</ul>
