--- a/hydredu/Bio/GeneticModification/index.html
+++ b/hydredu/Bio/GeneticModification/index.html
@@ -55,7 +55,7 @@
 		</li>
   		<li>
 			<a href="https://hydronesiumscratch.github.io/Game/">
-				JavaScript game
+				Flappy square
 			</a>
 		</li>
 	</ul>
