--- a/hydredu/Bio/GeneticModification/index.html
+++ b/hydredu/Bio/GeneticModification/index.html
@@ -8,6 +8,7 @@
 		body {
 			background-color: #222222;
 			color: #eeeeee;
+			font-family: Verdana, sans-serif;
 		}
 		ul {
 			list-style-type: none;
@@ -67,8 +68,8 @@
 			Are you for or against?
 		</h2>
 		<br>
-		In 1996, Dolly the sheep was the fruitage of an experiment, but what was that experiment?<p>
-		Dolly was clone. She was a clone of another sheep who 'kindly donated' their DNA in the form of a nucleus,<p>
+		In 1996, Dolly the sheep was the fruitage of an experiment, but what was that experiment?<br>
+		Dolly was clone. She was a clone of another sheep who 'kindly donated' their DNA in the form of a nucleus,<br>
 		the scientists then inserted the nucleus into the egg of another sheep, 
     </center>
   </body>
