--- a/scratchblocks/index.html
+++ b/scratchblocks/index.html
@@ -8,6 +8,7 @@
 		body {
 			background-color: #222222;
 			color: #eeeeee;
+			font-family: Verdana, sans-serif;
 		}
 		ul {
 			list-style-type: none;
