Update and rename hydredu/Bio/index.html to edu/Bio/index.html

--- a/edu/Bio/index.html
+++ b/edu/Bio/index.html
@@ -58,28 +58,7 @@
 		}
 	</style>
 	<body>
-		<ul>
-  			<li>
-				<a href="https://hydronesiumscratch.github.io/">
-					Home
-				</a>
-			</li>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/contributors/">
-					Contributors
-				</a>
-			</li>
-  			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/hydredu/">
-					hydreducation
-				</a>
-			</li>
-  			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
-				</a>
-			</li>
-		</ul>
+		<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
 		<ul class="sub">
   			<li>
 				<a href="https://hydronesiumscratch.github.io/hydredu/Bio/">
