--- a/edu/Bio/GeneticModification.html
+++ b/edu/Bio/GeneticModification.html
@@ -38,28 +38,7 @@
 		}
 	</style>
   <body>
-	<ul>
-		<li>
-			<a href="https://hydronesiumscratch.github.io/index.html">
-				Home
-			</a>
-		</li>
-		<li>
-			<a href="https://hydronesiumscratch.github.io/contributors/">
-				Contributors
-			</a>
-		</li>
-  		<li>
-			<a class="active" href="https://hydronesiumscratch.github.io/hydredu/">
-				hydreducation
-			</a>
-		</li>
-  		<li>
-			<a href="https://hydronesiumscratch.github.io/Game/">
-				Flappy square
-			</a>
-		</li>
-	</ul>
+	<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
 	<center>
 		<h2>
 			<br>
