--- a/edu/bio/index.html
+++ b/edu/bio/index.html
@@ -4,7 +4,7 @@
 			hydronesium - Home
 		</title>
 	</head>
-	<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/style.css">
+	<link rel="stylesheet" href="https://magnogen.github.io/src/style.css">
 	<style>
 		.sub {
 			list-style-type: none;
