--- a/edu/bio/index.html
+++ b/edu/bio/index.html
@@ -6,6 +6,14 @@
 	</head>
 	<link rel="stylesheet" href="https://magnogen.github.io/src/style.css">
 	<style>
+		body {
+			background-color: #222222;
+			color: #EEEEEE;
+			font-family: Verdana, sans-serif;
+		}
+		.edu {
+			background-color: #4286f4;
+		}
 		.sub {
 			list-style-type: none;
 			margin: 0;
