--- a/edu/bio/index.html
+++ b/edu/bio/index.html
@@ -50,27 +50,22 @@
 		
 		<ul class="sub_menu">
   			<li>
-				<a href="https://hydronesiumscratch.github.io/hydredu/Bio/">
+				<a href="https://magnogen.github.io/edu/bio/">
 					Biology
 				</a>
 			</li>
 		</ul>
 		<ul class="subsub_menu">
   			<li>
-				<a href="https://hydronesiumscratch.github.io/hydredu/Bio/GeneticModification/">
+				<a href="https://magnogen.github.io/edu/bio/GeneticModification.html">
 					Genetic modification
 				</a>
 			</li>
 		</ul>
 		<center>
 			<h3>
-				Click a hyperlink below to see other, closely linked, pages.
+				Click a hyperlink above to see other, closely linked, pages.
 			</h3>
-			<h4>
-			  <a href="GeneticModification/">
-			  	Genetic modification
-		  	</a>
- 	  	</h4>
 		</center>
 	</body>
 </html>
