--- a/edu/bio/index.html
+++ b/edu/bio/index.html
@@ -1,8 +1,9 @@
 <html>
 	<head>
 		<title>
-			hydronesium - Home
+			Magnogen - Education: Biology
 		</title>
+        	<link rel="icon" href="http://magnogen.github.io/H.png">
 	</head>
 	<link rel="stylesheet" href="https://magnogen.github.io/src/style.css">
 	<style>
