--- a/edu/bio/GeneticModification.html
+++ b/edu/bio/GeneticModification.html
@@ -1,55 +1,30 @@
 <html>
-  <head>
-    <title>
-      hydredu - Genetic modification
-    </title>
-  </head>
+	<head>
+		<title>
+	  		Magnogen - Education: Genectic modification
+	  	</title>
+          	<link rel="icon" href="http://magnogen.github.io/H.png">
+          	<link rel="stylesheet" href="https://magnogen.github.io/src/style.html">
+  	</head>
 	<style>
 		body {
 			background-color: #222222;
 			color: #eeeeee;
 			font-family: Verdana, sans-serif;
 		}
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 0;
-			width: 100%;
-		}
-		li {
-		    	float: left;
-		}
-		li a {
-		    	display: block;
-		    	color: white;
-		    	text-align: center;
-		    	padding: 14px 16px;
-		    	text-decoration: none;
-		}
-		li a:hover:not(.active) {
-		    	background-color: #111111;
-		}
-		.active {
-		    	background-color: #4CAF50;
-		}
 	</style>
-  <body>
-	<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
-	<center>
-		<h2>
+	<body>
+		<center>
+			<h2>
+				<br>
+				<br>
+				Some people agree with genetic engineering and cloning, however some don't.<p>
+				Are you for or against?
+			</h2>
 			<br>
-			<br>
-			Some people agree with genetic engineering and cloning, however some don't.<p>
-			Are you for or against?
-		</h2>
-		<br>
-		In 1996, Dolly the sheep was the fruitage of an experiment, but what was that experiment?<br>
-		Dolly was clone. She was a clone of another sheep who 'kindly donated' their DNA in the form of a nucleus,<br>
-		the scientists then inserted the nucleus into the egg of another sheep, 
-    </center>
-  </body>
+			In 1996, Dolly the sheep was the fruitage of an experiment, but what was that experiment?<br>
+			Dolly was clone. She was a clone of another sheep who 'kindly donated' their DNA in the form of a nucleus,<br>
+			the scientists then inserted the nucleus into the egg of another sheep, 
+    		</center>
+  	</body>
 </html>
