--- a/edu/bio/GeneticModification.html
+++ b/edu/bio/GeneticModification.html
@@ -4,7 +4,7 @@
 	  		Magnogen - Education: Genectic modification
 	  	</title>
           	<link rel="icon" href="http://magnogen.github.io/H.png">
-          	<link rel="stylesheet" href="https://magnogen.github.io/src/style.html">
+          	<link rel="stylesheet" href="https://magnogen.github.io/src/style.css">
   	</head>
 	<style>
 		body {
