Use the newer description content from homepage

--- a/edu/bio/index.html
+++ b/edu/bio/index.html
@@ -54,7 +54,8 @@
 		</ul>
 		<div style="text-align: center;">
 			<h3>
-				<br>Click a hyperlink above to see other, closely linked, pages.
+				Learn some useful info about a subject area.<br>
+				Click a hyperlink above to find out more.
 			</h3>
 		</div>
 	</body>
