Sort out sub-menu and text in edu/bio/index.html

--- a/edu/bio/index.html
+++ b/edu/bio/index.html
@@ -42,17 +42,24 @@
 		
 		<ul class="sub_menu">
   			<li>
-				<a href="/edu/bio/">Biology</a>
+				<a href="/edu/bio/">Biology (genetics)</a>
+			</li>
+			<li>
+				<a href="/edu/CompSci/">Computer science</a>
 			</li>
 		</ul>
 		<ul class="sub_menu sub_x2">
   			<li>
-				<a href="edu/bio/GeneticModification.html">
+				<a href="/edu/bio/GeneticModification.html">
 					Genetic modification
 				</a>
 			</li>
 		</ul>
+		
 		<div style="text-align: center;">
+			<h1>
+				Education: Biology section
+			</h1>
 			<h3>
 				Learn some useful info about a subject area.<br>
 				Click a hyperlink above to find out more.
