--- a/edu/bio/index.html
+++ b/edu/bio/index.html
@@ -29,7 +29,8 @@
 			.sub_x2 { /* Sub-sub-menu on this page. */
 				/* Avoid repeating code so use the sub-menu
 				class then add extra changes to this one. */
-				left: 5em;
+				border-top: none;
+				border-left: 2px solid #111111;
 			}
 		</style>
 	</head>
@@ -44,15 +45,13 @@
   			<li>
 				<a href="/edu/bio/">Biology (genetics)</a>
 			</li>
-			<li>
-				<a href="/edu/CompSci/">Computer science</a>
-			</li>
-		</ul>
-		<ul class="sub_menu sub_x2">
-  			<li>
+			<li class="sub_x2">
 				<a href="/edu/bio/GeneticModification.html">
 					Genetic modification
 				</a>
+			</li>
+			<li>
+				<a href="/edu/CompSci/">Computer science</a>
 			</li>
 		</ul>
 		
