Sort out sub-sub menu code in edu/bio/index.html

--- a/edu/bio/index.html
+++ b/edu/bio/index.html
@@ -29,6 +29,7 @@
 			.sub_x2 { /* Sub-sub-menu on this page. */
 				/* Avoid repeating code so use the sub-menu
 				class then add extra changes to this one. */
+				position: initial;
 				border-top: none;
 				border-left: 2px solid #111111;
 			}
