Finish fixing sub menu code in edu/bio/index.html

--- a/edu/bio/index.html
+++ b/edu/bio/index.html
@@ -30,8 +30,9 @@
 				/* Avoid repeating code so use the sub-menu
 				class then add extra changes to this one. */
 				position: initial;
-				border-top: none;
-				border-left: 2px solid #111111;
+				margin-left: 1em;
+				border: 2px solid rgba(0,0,0,0);
+				border-left-colour: #111111;
 			}
 		</style>
 	</head>
