--- a/edu/bio/index.html
+++ b/edu/bio/index.html
@@ -30,9 +30,8 @@
 				/* Avoid repeating code so use the sub-menu
 				class then add extra changes to this one. */
 				position: initial;
-				margin-left: 1em;
 				border: 2px solid rgba(0,0,0,0);
-				border-left-colour: #111111;
+				border-left-color: #111111;
 			}
 		</style>
 	</head>
