Use relative links in edu/bio/GeneticModification.html

--- a/edu/bio/GeneticModification.html
+++ b/edu/bio/GeneticModification.html
@@ -1,30 +1,39 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>
 	  		Magnogen - Education: Genectic modification
 	  	</title>
-          	<link rel="icon" href="http://magnogen.github.io/H.png">
-          	<link rel="stylesheet" href="https://magnogen.github.io/src/style.css">
+          	<base href="https://magnogen.github.io/">
+		<link rel="icon" href="/src/logo_icon.png">
+		<link rel="stylesheet" type="text/css" href="/src/style.css">
+		<style>
+			body {
+				background-color: #222222;
+				color: #EEEEEE;
+				font-family: Verdana, sans-serif;
+			}
+		</style>
   	</head>
-	<style>
-		body {
-			background-color: #222222;
-			color: #eeeeee;
-			font-family: Verdana, sans-serif;
-		}
-	</style>
 	<body>
-		<center>
+		<script src="https://www.w3schools.com/lib/w3.js"></script>
+		<div w3-include-html="/src/navbar.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
+		
+		<div style="text-align: center;">
 			<h2>
 				<br>
-				<br>
-				Some people agree with genetic engineering and cloning, however some don't.<p>
-				Are you for or against?
+				Genetic engineering and cloning<br>
+				- some people agree with it, others don't.<br>
+				Are you <span style="text-decoration: underline;">for</span>
+				or <span style="text-decoration: underline;">against</span>?
 			</h2>
 			<br>
-			In 1996, Dolly the sheep was the fruitage of an experiment, but what was that experiment?<br>
-			Dolly was clone. She was a clone of another sheep who 'kindly donated' their DNA in the form of a nucleus,<br>
-			the scientists then inserted the nucleus into the egg of another sheep, 
-    		</center>
+			In 1996, Dolly the sheep was the fruitage of an experiment, but what happened?<br>
+			Dolly was clone, a clone of another sheep who 'kindly donated' their DNA<br>
+			in the form of a nucleus,<br>which was then inserted by scientists into the egg of a sheep,
+    		</div>
   	</body>
 </html>
