--- a/edu/bio/GeneticModification.html
+++ b/edu/bio/GeneticModification.html
@@ -22,7 +22,7 @@
 			w3.includeHTML();
 		</script>
 		
-		<div style="text-align: center;">
+		<div style="text-align: center;color: #EEEEEE">
 			<h2>
 				<br>
 				Genetic engineering and cloning<br>
