--- a/edu/bio/GeneticModification.html
+++ b/edu/bio/GeneticModification.html
@@ -12,6 +12,9 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
+			.edu {
+				background-color: #4286f4;
+			}
 		</style>
   	</head>
 	<body>
