--- a/edu/bio/geneticModification.html
+++ b/edu/bio/geneticModification.html
@@ -37,5 +37,9 @@
 			Dolly was clone, a clone of another sheep who 'kindly donated' their DNA<br>
 			in the form of a nucleus,<br>which was then inserted by scientists into the egg of a sheep,
     		</div>
+		<div w3-include-html="/src/footer.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
   	</body>
 </html>
